Build changes to rdapd docker image.
* Now builds using docker multi stage support. This allows for using native open
  jdk containers.
* Uses new jvm options to detect docker memory limits. Should no longer need to
  tune this through env vars.