@@ -2,9 +2,6 @@
 
 echo "Launching with arguments: $@"
 
-JVM_INIT_MEM="${JVM_INIT_MEM:-4G}"
-JVM_MAX_MEM="${JVM_MAX_MEM:-8G}"
-
-exec java -Xms${JVM_INIT_MEM} -Xmx${JVM_MAX_MEM} \
-	-jar /app/@project.artifactId@-@project.version@.@project.packaging@ \
-	--spring.config.location=/app/config/application.yml
+exec java -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap \
+    -jar /app/rdapd.jar \
+    --spring.config.location=/app/config/application.yml
